--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CreedaVA - Creeda Virtual Assistants | Professional Remote Support</title>
-    <meta name="description" content="Professional virtual assistant services for businesses. From executive support to administrative tasks, CreedaVA provides dedicated remote assistance tailored to your needs. Contact us at +1 844-702-2202">
-    <meta name="keywords" content="virtual assistant, remote assistant, executive support, administrative services, business support, CreedaVA">
+    <title>CreedaVA - Bilingual Virtual Assistants from Belize | Professional Remote Support</title>
+    <meta name="description" content="Belize-based bilingual virtual assistants fluent in English & Spanish. Professional remote support for executive tasks, administration, customer service, and more. Founded 2023. Call +1 844-702-2202">
+    <meta name="keywords" content="virtual assistant, Belize virtual assistant, bilingual assistant, remote assistant, executive support, administrative services, business support, CreedaVA, English Spanish VA, Central America virtual assistant">
     <meta name="author" content="CreedaVA">
     <meta name="robots" content="index, follow">
     
